# RSDKv5-Example-Mods

./: .gitignore  .gitmodules  README.md
DuckysDevTools/: Android.mk  CMakeLists.txt  DuckysDevTools.sln  GameAPI  README.md
DuckysDevTools/DuckysDevTools/: DuckysDevTools.vcxproj  DuckysDevTools.vcxproj.filters  dllmain.c
DuckysDevTools/DuckysDevTools/Objects/: All.c  Announcer.c  Announcer.h  BSS_HUD.c  BSS_HUD.h  BSS_Setup.c  BSS_Setup.h  COverlay.c  COverlay.h  HUD.c  HUD.h  LottoMachine.c  LottoMachine.h  Player.c  Player.h  Zone.h
ExampleMod_C/: .gitignore  CMakeLists.txt  ExampleMod.sln  README.md
ExampleMod_C/ExampleMod/: ExampleMod.vcxproj  ExampleMod.vcxproj.filters  dllmain.c
ExampleMod_CPP/: CMakeLists.txt  README.md
ExampleMod_CPP/ExampleMod/: ExampleMod.vcxproj  ExampleMod.vcxproj.filters  dllmain.cpp
ManiaTouchControls/: .gitignore  Android.mk  CMakeLists.txt  ManiaTouchControls.sln  README.md
ManiaTouchControls/ManiaTouchControls/: Helpers.c  Helpers.h  ManiaTouchControls.vcxproj  ManiaTouchControls.vcxproj.filters  ModConfig.h  dllmain.c
ManiaTouchControls/ManiaTouchControls/Objects/: ActClear.c  ActClear.h  All.c  BSS_HUD.c  BSS_HUD.h  BSS_Player.c  BSS_Player.h  CPZBoss.c  CPZBoss.h  Camera.h  CreditsSetup.c  CreditsSetup.h  CutsceneSeq.c  CutsceneSeq.h  DASetup.c  DASetup.h  DebugMode.c  DebugMode.h  FXFade.c  FXFade.h  HUD.c  HUD.h  LevelSelect.c  LevelSelect.h  OOZ2Outro.c  OOZ2Outro.h  PBL_Crane.c  PBL_Crane.h  PBL_Flipper.c  PBL_Flipper.h  PBL_HUD.c  PBL_HUD.h  PBL_Player.c  PBL_Player.h  PBL_Setup.c  PBL_Setup.h  Player.c  Player.h  PuyoBean.c  PuyoBean.h  (+30 more)
MaxControl/: .gitignore  Android.mk  CMakeLists.txt  MaxControl.sln  README.md  Semaj Pittman
MaxControl/MaxControl/: MaxControl.vcxproj  MaxControl.vcxproj.filters  ModConfig.h  dllmain.c
NoLives/: .gitignore  NoLives.sln  README.md
NoLives/NoLives/: NoLives.vcxproj  NoLives.vcxproj.filters  dllmain.c
NoLives/NoLives/Objects/: CompeitionSession.c  CompetitionSession.h  HUD.c  HUD.h  Music.c  Music.h  Player.c  Player.h
PerZoneTitleCards/: .gitignore  Android.mk  CMakeLists.txt
PerZoneTitleCards/PerZoneTitleCards/: dllmain.c
UltrawideMania/: .gitignore  Android.mk  CMakeLists.txt  README.md  UltrawideMania.sln
UltrawideMania/UltrawideMania/: ModConfig.h  UltrawideMania.vcxproj  UltrawideMania.vcxproj.filters  dllmain.c
UltrawideMania/UltrawideMania/Objects/: All.c  All.h  Player.h  Zone.h
UltrawideMania/UltrawideMania/Objects/Bosses/: BigSqueeze.c  BigSqueeze.h  CrimsonEye.c  CrimsonEye.h  HeavyShinobi.c  HeavyShinobi.h  SpiderMobile.c  SpiderMobile.h
UltrawideMania/UltrawideMania/Objects/Cutscenes/: CutsceneSeq.c  CutsceneSeq.h
UltrawideMania/UltrawideMania/Objects/Menu/: MainMenu.c  MainMenu.h  UIControl.h  UIDiorama.c  UIDiorama.h
